--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/audio/background_music.mp3
     - assets/images/backgrounds/ground.png
     - assets/images/backgrounds/sky.png
     - assets/images/birds/bird_dead.png
