--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   charts_flutter: ^0.9.0
   flame: ^0.18.2
+  flutter_blue: ^0.7.2
   intl: ^0.16.1
   path: ^1.6.4
   path_provider: ^1.6.7
