Added programmable cherry locations with file parsing

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ flutter:
   uses-material-design: true
 
   assets:
+    - assets/levels/
     - assets/audio/background_music.mp3
     - assets/images/backgrounds/ground.png
     - assets/images/backgrounds/sky.png
