--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,8 @@ dependencies:
   flutter:
     sdk: flutter
 
+  csv: ^5.0.0
+  share_extend: ^2.0.0
   cupertino_icons: ^0.1.2
   charts_flutter: ^0.9.0
   flame: ^0.29.4
